// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StepKubeconfig should match snapshot 1`] = `
<div>
  <section
    class="flex flex-col"
  >
    <div
      class="mb-10"
    >
      <h1
        class="text-neutral-400 text-xl font-bold mb-2"
      >
        Kubeconfig
      </h1>
      <p
        class="text-neutral-350"
      >
        Upload your Kubeconfig file here.
      </p>
    </div>
    <form>
      <div
        class="mb-10"
      >
        <div
          class="dropzone"
          role="presentation"
          tabindex="0"
        >
          <input
            data-testid="drop-input"
          />
          <div
            class="flex w-full items-center justify-center min-h-[140px] rounded bg-neutral-100 border border-neutral-250 hover:border-neutral-300 transition-all ease-in-out duration-150 cursor-pointer text-neutral-350 text-xs border-dashed"
          >
            <div
              class="flex items-center h-full justify-center flex-col text-center"
            >
              <span
                class="icon-solid-file-arrow-down shrink-0 text-xl mb-2"
                role="img"
              />
              <p>
                Click to import your 
                kubeconfig
                 file or
                <br />
                drag and drop it
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex justify-between"
      >
        <button
          class="inline-flex items-center shrink-0 font-medium transition text-sm h-10 px-4 rounded border border-neutral-250 dark:border-neutral-350 text-neutral-400 dark:text-neutral-300 hover:[&:not(:active)]:border-neutral-300 active:bg-neutral-150 disabled:text-neutral-300 disabled:bg-neutral-150 disabled:border-none bg-neutral-100 dark:bg-neutral-500 dark:hover:bg-neutral-550"
          type="button"
        >
          Back
        </button>
        <button
          class="inline-flex items-center shrink-0 font-medium transition border text-sm h-10 px-4 rounded bg-brand-500 border-brand-500 hover:border-brand-600 hover:bg-brand-600 text-white disabled:text-brand-300 disabled:bg-brand-100 disabled:border-none"
          data-testid="button-submit"
          disabled=""
          type="submit"
        >
          Continue
        </button>
      </div>
    </form>
  </section>
</div>
`;

exports[`StepKubeconfig should match snapshot 2`] = `
<div>
  <section
    class="flex flex-col"
  >
    <div
      class="mb-10"
    >
      <h1
        class="text-neutral-400 text-xl font-bold mb-2"
      >
        Kubeconfig
      </h1>
      <p
        class="text-neutral-350"
      >
        Upload your Kubeconfig file here.
      </p>
    </div>
    <form>
      <div
        class="mb-10"
      >
        <div
          class="flex border border-neutral-200 p-3 gap-2 rounded items-center"
        >
          <div
            class="p-2"
          >
            <span
              class="icon-solid-file-lines shrink-0 "
              role="img"
            />
          </div>
          <div
            class="flex flex-col text-xs grow"
          >
            <span
              class="text-neutral-400 font-medium"
            >
              file.yaml
            </span>
            <span
              class="text-neutral-350"
            >
              1234
               Ko
            </span>
          </div>
          <div>
            <button
              class="inline-flex items-center shrink-0 font-medium transition text-xs h-7 px-2 rounded border border-neutral-250 dark:border-neutral-350 text-neutral-400 dark:text-neutral-300 hover:[&:not(:active)]:border-neutral-300 active:bg-neutral-150 disabled:text-neutral-300 disabled:bg-neutral-150 disabled:border-none bg-transparent"
              type="button"
            >
              <span
                class="icon-solid-trash shrink-0 "
                role="img"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="flex justify-between"
      >
        <button
          class="inline-flex items-center shrink-0 font-medium transition text-sm h-10 px-4 rounded border border-neutral-250 dark:border-neutral-350 text-neutral-400 dark:text-neutral-300 hover:[&:not(:active)]:border-neutral-300 active:bg-neutral-150 disabled:text-neutral-300 disabled:bg-neutral-150 disabled:border-none bg-neutral-100 dark:bg-neutral-500 dark:hover:bg-neutral-550"
          type="button"
        >
          Back
        </button>
        <button
          class="inline-flex items-center shrink-0 font-medium transition border text-sm h-10 px-4 rounded bg-brand-500 border-brand-500 hover:border-brand-600 hover:bg-brand-600 text-white disabled:text-brand-300 disabled:bg-brand-100 disabled:border-none"
          data-testid="button-submit"
          disabled=""
          type="submit"
        >
          Continue
        </button>
      </div>
    </form>
  </section>
</div>
`;
